# Pybacked

./: LICENSE  README.md  pyproject.toml
pybacked/: decrypt.py  encrypt.py  install.py
pybacked/handlers/: aes.py  assembler.py  disassembler.py  exceptions.py  models.py
pybacked/secret_sharing/: aes.py  exceptions.py  shamir.py
tests/: test_aes.py  test_shamir.py
